# Coupled-VAE

./: README.md  pyproject.toml  setup.py
CVAE-Results/: readme
CVAE-Tensorflow/: README.md  pyproject.toml  setup.py
Coupled VAE/: coupledvae_v3.ipynb
analysis/: analysis_vae_v4.3_beta.ipynb
coupled_VAE/: coupled_functions_torch.py  run.py
coupled_VAE tracking loss variance and beta/: callbackLoss.py  coupled_functions_torch.py  dataset.py  experiment.py  run.py
coupled_VAE with MSE loss/: coupled_functions_torch.py  dataset.py  experiment.py  run.py
coupled_VAE with cross entropy loss/: check_versions.py  coupled_functions_torch.py  dataset.py  experiment.py
coupled_vae/: VAE.ipynb  classifier.ipynb  comparison_d20.csv  coupled_vae_v10_1_January_01_2023_CIFAR10.ipynb  coupled_vae_v5.2.ipynb  coupled_vae_v5.ipynb  coupled_vae_v6.1.ipynb  coupled_vae_v6.2.ipynb  coupled_vae_v6_2_cw.ipynb  coupled_vae_v7.ipynb  coupled_vae_v8_2.ipynb  coupled_vae_v8_testing.ipynb  coupledvae_v1.ipynb  coupledvae_v4.1.ipynb  coupledvae_v4.ipynb  coupledvae_v4_cw.ipynb  coupledvae_v4_cw_v2.ipynb  coupledvae_v4_new_driectory_structure.ipynb  coupledvae_v4_val_wip.ipynb  experiment_utils.py  readme.md
coupledvae/: VAECIFAR.py  VAEMNIST.py  VAEModelCIFAR.py  __version__.py  experiment_utils.py  experiment_utils_MNIST.py
coupledvae.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
cvae/: Sampler_Z.py  VAECIFAR.py  VAEMNIST.py  VAEModelMNIST.py  experiment_utils.py
cvae_tidy/: VAEModelCIFAR.py
notebooks/: coupled_vae_v10_1_January_01_2023_CIFAR10.ipynb  (+1 more)
(+328 files in other folders)
